--- a/src/Loader.css
+++ b/src/Loader.css
@@ -1,6 +1,6 @@
 .loader {
     margin: 0 auto;
-    padding-top: 50px;
+    margin-top: 100px;
     font-size: 25px;
     width: 1em;
     height: 1em;
